src/test/deca/context/valid/non_provided/instanceof.deca
// Description:
//    Exemple utilisant l'instruction instanceof 
//
// Resultats:
//    Ok
// 
// Historique:
//    cree le 27/01/2020

class A {

}

{
    A a = new A();

    if(a instanceof A) {
        print("Ok");
    }
}